# robot

./: README.md
install/: local_setup.sh  setup.sh
install/my_turtlebot/lib/my_turtlebot/: avoid  teleop_key  trajectory
install/my_turtlebot/share/my_turtlebot/: package.dsv  package.ps1  package.sh  package.xml
log/: latest_build
my_turtlebot/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
my_turtlebot/my_turtlebot/: __init__.py  avoid.py  teleop_key.py
