<?xml version="1.0"?>
<!-- Package manifest for my_turtlebot. -->
<package format="3">
  <name>my_turtlebot</name>
  <version>0.0.0</version>
  <description>TurtleBot3 keyboard teleoperation.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
